wip on wdbench, issue with preemption, must rework